--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
       <div class="header-list">
         <ul>
-          <li>デイトラとは</li>
+          <li>デイトラ</li>
           <li>コース一覧</li>
           <li>お問い合わせ</li>
         </ul>
